syntax = "proto3";
package pcaptcha;
import "google/protobuf/empty.proto";
import "common.proto";

option go_package = "github.com/wshops/wshop-plugin-common/pkg/pcaptcha";

// go:plugin type=plugin version=1
service Captcha {
  rpc ConfigPluginInfo(google.protobuf.Empty) returns (PluginInfo);

  // VerifyCaptcha 验证验证码
  rpc VerifyCaptcha(VerifyCaptchaRequest) returns (VerifyCaptchaResponse);

  // GetCustomHtmlInputField 获取自定义的html输入框
  rpc GetCustomHtmlInputField(google.protobuf.Empty) returns (GetCustomHtmlInputFieldResponse);

  // GetCustomHtmlHead 自定义 html 头部中需要加的内容
  rpc GetCustomHtmlHead(google.protobuf.Empty) returns (GetCustomHtmlHeadResponse);

  // GetCustomHtmlBodyEnd 自定义 html body 中最结尾需要加的内容
  rpc GetCustomHtmlBodyEnd(google.protobuf.Empty) returns (GetCustomHtmlBodyEndResponse);
}

message VerifyCaptchaRequest {
  string captcha = 2;
}

message VerifyCaptchaResponse {
  bool isValid = 2;
}

message GetCustomHtmlInputFieldResponse {
  string html = 20;
}

message GetCustomHtmlHeadResponse {
  string html = 20;
}

message GetCustomHtmlBodyEndResponse {
  string html = 20;
}