syntax = "proto3";
package pvcode;
import "google/protobuf/empty.proto";
import "common.proto";

option go_package = "github.com/wshops/wshop-plugin-common/pkg/pvcode";

// go:plugin type=plugin version=1
service VCode {
  rpc GetPluginInfo(google.protobuf.Empty) returns (PluginInfo);
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (SendVerificationCodeResponse);
}

enum SendType {
  EMAIL = 0;
  SMS = 1;
  OTHER = 5;
}
message SendVerificationCodeRequest {
  SendType sendType = 1;
  string target = 2;
  string code = 3;
}

message SendVerificationCodeResponse {
  bool success = 2;
  string error = 4;
}

//**************************
//*      host function     *
//**************************

// go:plugin type=host
service HostFunctions {
  rpc LogInfo(HFuncLogRequest) returns (google.protobuf.Empty);
  rpc LogError(HFuncLogRequest) returns (google.protobuf.Empty);
  rpc LogDebug(HFuncLogRequest) returns (google.protobuf.Empty);
  rpc LogWarn(HFuncLogRequest) returns (google.protobuf.Empty);
  rpc LogFatal(HFuncLogRequest) returns (google.protobuf.Empty);
  rpc LogPanic(HFuncLogRequest) returns (google.protobuf.Empty);
  rpc HttpRequest(HFuncHttpRequest) returns (HFuncHttpResponse);
}