syntax = "proto3";
option go_package = "github.com/wshops/wshop-plugin-common/pkg/wpc";

//**************************
//*        commons         *
//**************************
message ConfigPluginInfoRequest {}
message PluginInfo {
  string Id = 1;
  string Name = 2;
  string Version = 3;
  string Author = 4;
  string Description = 5;
  string Icon = 6;
  map<string,string> PluginConstant = 7;
  repeated PAttributes UserAttributes = 8;
}

message PAttributes {
  string Key = 1;
  string Name = 2;
  string Description = 3;
  string Type = 4;
  string VRule = 5;
  string VMsg = 6;
}